--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ h3 { color: #00B8F0; }
     margin: 20px auto 35px;
   }
   .resaltado {
-  color: #00aaff;              /* Color del texto */
+  color: #ffffff;              /* Color del texto blanco*/
   font-size: 1.2rem;           /* Tamaño del texto */
   text-decoration: underline;  /* Subrayado */
   text-decoration-color: #00aaff;
