--- a/styles.css
+++ b/styles.css
@@ -257,4 +257,16 @@ h3 { color: #00B8F0; }
   text-decoration-thickness: 2px;
   text-underline-offset: 3px;
 }
+  /* Color de links y efecto hover */
+a {
+  color: #38bdf8;
+  text-decoration: none;
+  border-bottom: 1px solid transparent;
+  transition: all 0.25s ease;
+}
+
+a:hover {
+  color: #0ea5e9;
+  border-bottom: 1px solid #0ea5e9;
+}  
 }
